syntax = "proto3";
package intertx;

option go_package = "github.com/cosmos/interchain-accounts/x/inter-tx/types";

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "ibc/core/client/v1/client.proto";
import "ibc/applications/interchain_accounts/v1/account.proto";

// Query defines the gRPC querier service.
service Query {
  rpc IBCAccountFromAddress(QueryIBCAccountFromAddressRequest) returns (QueryIBCAccountFromAddressResponse); 
}

message QueryIBCAccountFromAddressRequest {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  bytes address = 1
    [ (gogoproto.casttype) =
       "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string channelId = 2;
  string prefix = 3;
}
 
message QueryIBCAccountFromAddressResponse {
  string address = 1;
}

